--- a/myproject3/templates/counter.html
+++ b/myproject3/templates/counter.html
@@ -1,3 +1,4 @@
 {% load static %}
-<link rel="stylesheet" href= "{% static 'style.css' %}">
-<h1>The amount of words is {{amount}} </h1>
+{% for post in posts %}
+<a href="post/{{post}}">Post </a>
+{%endfor%}
