--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,33 +1,34 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Blog</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-      </head>
-  <body>
-    <div class="container">
-        <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Blog</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styleindex.css">
+  </head>
+<body>
+    <div class="container" style="margin-top: 20px;">
+        <div class="p-5 mb-4 bg-body-tertiary rounded-3" style="background-color: #f8f9fa; border-radius: 15px;">
             <div class="container-fluid py-5">
-              <h1 class="display-5 fw-bold">A.B khan Blog</h1>
-              <p class="col-md-8 fs-4"></p>
-              
+                <h1 class="display-5 fw-bold" style="color: #343a40;">A.B khan Blog</h1>
+                <p class="col-md-8 fs-4"></p>
             </div>
-          </div>
+        </div>
 
-          {% for post in posts %}
-            <div class="card">
-                <div class="card-body">
-                    <div class="container-fluid py-5">
-                        <h1 class="display-5 fw-bold"> {{post.title}} </h1>
-                        <p class="col-md-8 fs-4">{{post.body}}</p>
-                        <p class="col-md-8 fs-4"> {{post.created_at}} </p>
-                        
-                      </div>
+        {% for post in posts reversed %}
+        <div class="card" style="margin-bottom: 20px; border: none; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+            <div class="card-body">
+                <div class="container-fluid py-5">
+                    <a href="post/{{post.id}}" style="text-decoration: none; color: inherit;">
+                        <h1 class="display-5 fw-bold">{{post.title}}</h1>
+                        <p class="col-md-8 fs-4">{{post.body | truncatewords:20}}</p>
+                        <p class="col-md-8 fs-4" style="color: #6c757d;">{{post.created_at}}</p>
+                    </a>
                 </div>
             </div>
-          {% endfor %}
+        </div>
+        {% endfor %}
     </div>
-  </body>
+</body>
 </html>
